2005-01-25  Naba Kumar  <naba@gnome.org>

	* plugins/editor/plugin.c, plugins/project-manager/plugin.c: Fixed
	session save filenames.
	
	* plugins/editor/anjuta-docman.c: Lazy create fileselection dialogs.
	
2005-01-24  Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/project-wizard/Makefile.am,
	plugins/project-wizard/install.c,
	plugins/project-wizard/install.h,
	plugins/project-wizard/parser.c,
	plugins/project-wizard/parser.h,
	plugins/project-wizard/templates/terminal.wiz:
	Add action list block in wizard template
	* plugins/project-wizard/file.c,
	plugins/project-wizard/autogen.c:
	Small fixes

2005-01-23  Naba Kumar  <naba@gnome.org>

	* configure.in: Fixed build error.

2005-01-22  Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/project-wizard/druid.c,
	plugins/project-wizard/parser.c,
	plugins/project-wizard/property.c: Rewrite parser with
	better error handling

2005-01-22  Naba Kumar  <naba@gnome.org>

	* plugins/symbol-browser/plugin.c: Changed c++ coments
	to c commnets and formated code to anjuta coding styles.
	
2005-01-21  Naba Kumar  <naba@gnome.org>

	* configure.in, autogen.sh: Fixed build errors in newer automake.
	
	* plugins/editor/anjuta-docman.c: Do not emit change editor
	signal while in dispose.

	Patch from: Massimo Corà <maxcvs@email.it>
	* plugins/symbol-browser/Makefile.am,
	plugins/symbol-browser/an_symbol_view.c,
	plugins/symbol-browser/an_symbol_view.h,
	plugins/symbol-browser/plugin.c,
	plugins/symbol-browser/plugin.h,
	plugins/symbol-browser/test-symbol-browser.c,
	(new) plugins/symbol-browser/an_symbol_info.c,
	(new) plugins/symbol-browser/an_symbol_info.h,
	(new) plugins/symbol-browser/an_symbol_search.c,
	(new) plugins/symbol-browser/an_symbol_search.h:
	Added a cool real-time symbol-search-view in symbol browser.

2005-01-21  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugin/macro/plugin.c
	plugin/macro/anjuta-macro-plugin.ui
	plugin/macro/macro-db.[ch]
	plugin/macro/macro-dialog.[ch]
	plugin/macro/macro-actions.[ch]